--- a/static/index.html
+++ b/static/index.html
@@ -1,1 +1,16 @@
-<a href="featured.json">featured.json</a>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Shijima-Featured</title>
+    </head>
+    <body>
+        <p>
+            The featured shimeji list displayed in Shijima is hosted here.
+            See: <a href="featured.json">featured.json</a>
+        </p>
+        <p>
+            For more information about Shijima, visit
+            <a href="https://getshijima.app">https://getshijima.app</a>.
+        </p>
+    </body>
+</html>
