Fix featured.json link

--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <body>
         <p>
             The featured shimeji list displayed in Shijima is hosted here.
-            See: <a href="/featured.json?$$REVISION$$">featured.json</a>
+            See: <a href="featured.json?$$REVISION$$">featured.json</a>
         </p>
         <p>
             For more information about Shijima, visit
